Kexi Query Designer: support queries having the same field name used in multiple tables

BUG:340056
FIXED-IN:2.9.11